--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    min-height: 100vh;
+    min-width: 100%;
+    background-color: #c1e4bd;
+}
+
 .header {
     background: linear-gradient(#87d4a5, #c1e4bd);
 }
@@ -7,14 +13,10 @@
     margin: 30px 0px 0px 50px;
 }
 
-body {
-    min-height: 100vh;
-    min-width: 100%;
-}
-
 main {
     display: flex;
     background: #c1e4bd;
+    min-height: 72vh;
 }
 
 .pergunta {
